# bleed-endurance

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
BleedCore/: Package.swift
BleedCore/Sources/BleedCore/DataSources/: IntervalsICUClient.swift  TrainingDataSource.swift
BleedCore/Sources/BleedCore/Engine/: CyclePhaseEstimator.swift  ReadinessEngine.swift
BleedCore/Sources/BleedCore/Models/: CyclePhase.swift  ReadinessScore.swift  RecoverySnapshot.swift  TrainingLoadSnapshot.swift  UserBaseline.swift
BleedCore/Tests/BleedCoreTests/: CyclePhaseEstimatorTests.swift  ReadinessEngineTests.swift
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: engine.py  main.py  schemas.py
backend/tests/: test_api.py
docs/: SPEC.md
ios/: project.yml
ios/Bleed/: Info.plist
ios/Bleed/App/: AppModel.swift  BleedApp.swift  DemoData.swift
ios/Bleed/Services/: HealthKitService.swift
ios/Bleed/Theme/: BloomTheme.swift
ios/Bleed/Views/: CycleCalendarView.swift  CycleWheelView.swift  OnboardingView.swift  RecoveryView.swift  RootView.swift  TodayView.swift  TrainingLoadView.swift
